fix room modal spacing in party map

--- a/src/components/templates/PartyMap/PartyMap.scss
+++ b/src/components/templates/PartyMap/PartyMap.scss
@@ -45,4 +45,9 @@ body {
     border-radius: 4px;
     background-color: rgba($white, 0.1);
   }
+
+  &.modal-open {
+    padding: 0 0 0 0 !important;
+    overflow-y: scroll !important;
+  }
 }
